[SC-9693] fixed responsive menu on tablets

--- a/src/shared/personal-finance-layout/app-area-navigation/app-area-navigation.component.less
+++ b/src/shared/personal-finance-layout/app-area-navigation/app-area-navigation.component.less
@@ -166,7 +166,7 @@
         display: none;
         position: absolute;
         right: unset!important;
-        @media all and (max-width: 767px) {
+        @media all and (max-width: 768px) {
             height: auto;
             right: 0 !important;
             max-height: calc(~"100vh - 90px");
